# DexGraspVLA

./: README_DETAILED.md  __init__.py  pyproject.toml  train.sh
PlayGround/: Untitled-1.ipynb
planner/: dexgraspvla_planner.py
scripts/: config.yaml  inference.py  train.py
scripts/inference_utils/: __init__.py
scripts/planner/: __init__.py  dexgraspvla_planner.py
scripts/utils/: __init__.py
src/dexgraspvla/: __init__.py
src/dexgraspvla/controller/: __init__.py
src/dexgraspvla/controller/common/: sampler.py  streaming_replay_buffer.py
src/dexgraspvla/controller/config/: train_dexgraspvla_controller_workspace.yaml
src/dexgraspvla/controller/dataset/: base_dataset.py  mask_image_dataset.py
src/dexgraspvla/controller/env_runner/: base_image_runner.py  real_grasp_image_runner.py
src/dexgraspvla/controller/model/common/: normalizer.py
src/dexgraspvla/controller/model/diffusion/: transformer_for_action_diffusion.py
src/dexgraspvla/controller/model/vision/: obs_encoder.py
src/dexgraspvla/controller/policy/: base_image_policy.py  dexgraspvla_controller.py
src/dexgraspvla/controller/workspace/: train_dexgraspvla_controller_workspace.py
utils/: adg_utils.py  profile_utils.py  ros_utils.py
