[project]
name = "dexgraspvla"
version = "0.1.0"
description = "A Vision-Language-Action Framework Towards General Dexterous Grasping"
authors = [
    { name = "siky", email = "41624527+SevenFo@users.noreply.github.com" },
]
requires-python = "~=3.9.0"
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "xformers==0.0.29.post1",
    "accelerate==1.2.1",
    "diffusers==0.32.1",
    "timm==1.0.12",
    "numpy==1.23.3",
    "scipy==1.9.1",
    "einops==0.4.1",
    "matplotlib==3.9.4",
    "numba==0.53.1",
    "zarr==2.12.0",
    "tqdm==4.64.1",
    "datasets==2.6.1",
    "hydra-core==1.2.0",
    "wandb==0.13.3",
    "json-repair==0.36.1",
    "openai==1.63.2",
    "scikit-image==0.19.3",
    "seaborn==0.13.2",
    "pydantic==2.11.4",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "flake8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 使用 src/ 布局
packages = ["src/dexgraspvla"]

# 排除包内的临时文件和缓存
exclude = [
    "**/__pycache__/",
    "**/*.pyc",
    "**/*.pyo",
    "**/*.pyd",
    "**/.pytest_cache/",
    "**/test_*.py",
    "**/*_test.py",
    "**/.DS_Store",
    "**/*.log",
    "**/tmp/",
    "**/temp/",
]
